--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
-    "vue": "^3.2.33"
+    "vue": "^3.2.33",
+    "ws": "^8.5.0"
   }
 }
