--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cryptocarousel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bastien707/CryptoCarousel#readme",
   "dependencies": {
+    "@vue/cli": "^5.0.4",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jquery": "^3.6.0",
