--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "dotenv": "^16.0.0",
+    "vue": "^3.2.33",
+    "vue-axios": "^3.4.1",
     "vue-content-loader": "^2.0.1",
     "vue-router": "^4.0.3",
     "ws": "^8.5.0"
