--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "concurrently \"node rest.js \" \"node ws.js\""
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,15 @@
   "homepage": "https://github.com/bastien707/CryptoCarousel#readme",
   "dependencies": {
     "@vue/cli": "^5.0.4",
+    "concurrently": "^7.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-ws": "^5.0.2",
     "jquery": "^3.6.0",
     "knex": "^2.0.0",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
-    "pug": "^3.0.2",
     "vue": "^3.2.33",
     "ws": "^8.5.0"
   }
